package com.csl.adapter;

/**
 * @author MaoLongLong
 * @date 2021/4/28 上午12:22
 */
public class Client {

    public void consume(Target target) {
        target.request();
    }
}
