package com.csl.proxy;

/**
 * @author MaoLongLong
 */
public interface Subject {

    /**
     * 模拟发请求
     */
    void request();
}
